--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -2,7 +2,7 @@
 #+author: Daniel Mendler
 #+language: en
 
-* Development
+* Version 1.10 (2025-10-13)
 
 - Require Emacs 29.1.
 - Shorter horizontal line prettification to avoid line truncation indicators.
