--- a/README.org
+++ b/README.org
@@ -30,8 +30,8 @@ harmonically and have approximately the same height. As default font, I
 recommend variants of the [[https://github.com/be5invis/Iosevka][Iosevka]] font, e.g., Iosevka Term Curly.
 =org-modern-mode= tries to adjust the tag label display based on the value of
 =line-spacing=. This looks best if =line-spacing= has a value between 0.1 and 0.4 in
-the Org buffer. Larger values of =line-spacing= are not recommended, since Emacs
-does not center the text vertically (see Emacs [[https://debbugs.gnu.org/cgi/bugreport.cgi?bug=76390][bug#76390]]).
+the Org buffer. As of Emacs 30, the text is not centered with =line-spacing=, but
+I am hopeful that centering will be available in Emacs 31 (see Emacs [[https://debbugs.gnu.org/cgi/bugreport.cgi?bug=76390][bug#76390]]).
 
 * Configuration
 
