--- a/README.org
+++ b/README.org
@@ -28,10 +28,7 @@ Since this package adjusts text styling, it depends on your font settings. You
 should ensure that your =variable-pitch= and =fixed-pitch= fonts combine
 harmonically and have approximately the same height. As default font, I
 recommend variants of the [[https://github.com/be5invis/Iosevka][Iosevka]] font, e.g., Iosevka Term Curly.
-=org-modern-mode= tries to adjust the tag label display based on the value of
-=line-spacing=. This looks best if =line-spacing= has a value between 0.1 and 0.4 in
-the Org buffer. As of Emacs 30, the text is not centered with =line-spacing=, but
-I am hopeful that centering will be available in Emacs 31 (see Emacs [[https://debbugs.gnu.org/cgi/bugreport.cgi?bug=76390][bug#76390]]).
+=org-modern-mode= tries to adjust the tag label display based on font height.
 
 * Configuration
 
@@ -92,6 +89,11 @@ screenshot above after the installation of =org-modern=.
 
 (global-org-modern-mode)
 #+end_src
+
+Furthermore I recommend to use =line-spacing= with a value between 0.1 and 0.4 to
+give the text some room to breathe. Unfortunately as of Emacs 30, the text is
+not centered with =line-spacing=, but I am hopeful that centering will be
+available in Emacs 31 (see Emacs [[https://debbugs.gnu.org/cgi/bugreport.cgi?bug=76390][bug#76390]]).
 
 * Incompatibilities
 
